Fix effect position and z-indexes.

--- a/web/css/pride.css
+++ b/web/css/pride.css
@@ -25,6 +25,7 @@ body.night {
 #plul > li.active{
     color: var(--colorText)!important;
     font-weight:bold;
+    z-index: 0;
 }
 #plul > li:nth-child(6n) {
     background-color: var(--colorRed)!important;
@@ -88,6 +89,7 @@ body.night {
     width:200%;
     height:100%;
     position: absolute;
+    top: 0;
     left: 0;
     z-index:-1;
     background: linear-gradient(
